--- a/vignettes/articles/chapter-7.Rmd
+++ b/vignettes/articles/chapter-7.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Chapter 7: Examining the Multilevel Model's Error Covariance Structure"
+title: "Chapter 7: Examining the multilevel model's error covariance structure"
 ---
 
 ```{r, include = FALSE}
